--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "100years",
-  
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -15,6 +14,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.13.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
