--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-player": "^2.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.13.0",
